--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
     <body>
 
-        <p> Hello ! </p>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js" integrity="sha512-WIklPM6qPCIp6d3fSSr90j+1unQHUOoWDS4sdTiR8gxUTnyZ8S2Mr8e10sKKJ/bhJgpAa/qG068RDkg6fIlNFA==" crossorigin="anonymous"></script>
+
+        <p> This website is currently under construction, check back soon! </p>
+        <p> Created by jonhuo11 </p>
+
+        <script src="./scripts/lsystem.js"></script>
 
     </body>
 </html>
