added optimized single image generator

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p> This website is currently under construction, check back soon! </p>
         <p> Created by jonhuo11 </p>
 
-        <script src="./scripts/lsystem.js"></script>
+        <script src="./scripts/scene.js"></script>
 
     </body>
 </html>
