barebones demo site complete

--- a/index.html
+++ b/index.html
@@ -8,16 +8,31 @@
         <meta name="description" content="jonhuo11">
         <meta name="author" content="jonhuo11">
 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="./styles/index.css"/>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js" integrity="sha512-WIklPM6qPCIp6d3fSSr90j+1unQHUOoWDS4sdTiR8gxUTnyZ8S2Mr8e10sKKJ/bhJgpAa/qG068RDkg6fIlNFA==" crossorigin="anonymous"></script>
+        <script src="./scripts/scene.js"></script>
+
     </head>
 
     <body>
+        <div id="overlay">
+            <div id="about">
+                <br />
+                <h1>Jonathan Huo</h1>
+                <a href="mailto:jonhuo11@gmail.com">jonhuo11@gmail.com</a>
+                <br />
+                <a href="https://github.com/jonhuo11">github.com/jonhuo11</a>
+                <br /><br />
+                <p>
+                    Aspiring programmer and engineer,<br />
+                    Waterloo CI graduating class of 2021.<br /><br />
+                    View my project portfolio and resume below
+                </p>
+            </div>
+        </div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js" integrity="sha512-WIklPM6qPCIp6d3fSSr90j+1unQHUOoWDS4sdTiR8gxUTnyZ8S2Mr8e10sKKJ/bhJgpAa/qG068RDkg6fIlNFA==" crossorigin="anonymous"></script>
-
-        <p> This website is currently under construction, check back soon! </p>
-        <p> Created by jonhuo11 </p>
-
-        <script src="./scripts/scene.js"></script>
-
+        <div id="sketch"></div>
     </body>
 </html>
