added papers and resume

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
                 <p>
                     Aspiring programmer and engineer,<br />
                     Waterloo CI graduating class of 2021.<br /><br />
-                    View my project portfolio and resume below
+                    Click to view my <a class="linksmall" href="a">resume</a> and featured <a class="linksmall" href="a">research papers</a>.
                 </p>
+
             </div>
         </div>
 
