--- a/index.html
+++ b/index.html
@@ -21,16 +21,31 @@
             <div id="about">
                 <br />
                 <h1>Jonathan Huo</h1>
-                <a href="mailto:jonhuo11@gmail.com">jonhuo11@gmail.com</a>
+                <img src="./static/img/cartoonme.png" alt="a picture of me"></img>
+                <a href="mailto:jonhuo11@gmail.com">&#128236;jonhuo11@gmail.com</a>
                 <br />
-                <a href="https://github.com/jonhuo11">github.com/jonhuo11</a>
+                <a href="https://github.com/jonhuo11">&#128278;github.com/jonhuo11</a>
                 <br /><br />
                 <p>
                     Aspiring programmer and engineer,<br />
                     Waterloo CI graduating class of 2021.<br /><br />
-                    Click to view my <a class="linksmall" href="a">resume</a> and featured <a class="linksmall" href="a">research papers</a>.
+                    Click on these links to view my
+                    <a class="linksmall" href="https://jonhuo11.github.io/static/resume/JONATHAN%20HUO%20TR2020%20Resume.pdf">&#128084;resume</a>
+                    and featured
+                    <a class="linksmall" href="https://github.com/jonhuo11/jonhuo11.github.io/tree/master/static/papers">&#128221;research papers</a>.
                 </p>
-
+                <br /><br />
+                <h2>Lindenmayer Systems</h2>
+                <p>
+                    The plant graphics on these page are created using
+                    <a class="linksmall" href="http://algorithmicbotany.org/papers/abop/abop.pdf">&#127807;Lindenmayer Systems</a>.
+                    Using Javascript and a bit of math, I coded a renderer that can generate
+                    stochastic plant models for your viewing pleasure.
+                </p>
+                <br />
+                <p>
+                    Go ahead and <a onclick="windowResized();" class="linksmall">&#9193;click here</a> to generate something beautiful.
+                </p>
             </div>
         </div>
 
