--- a/index.html
+++ b/index.html
@@ -19,22 +19,25 @@
     <body>
         <div id="overlay">
             <div id="about">
+
                 <br />
                 <h1>Jonathan Huo</h1>
                 <img src="./static/img/cartoonme.png" alt="a picture of me"></img>
                 <a href="mailto:jonhuo11@gmail.com">&#128236;jonhuo11@gmail.com</a>
                 <br />
-                <a href="https://github.com/jonhuo11">&#128278;github.com/jonhuo11</a>
+                <a href="https://github.com/jonhuo11">&#128190;github.com/jonhuo11</a>
                 <br /><br />
                 <p>
                     Aspiring programmer and engineer,<br />
                     Waterloo CI graduating class of 2021.<br /><br />
                     Click on these links to view my
                     <a class="linksmall" href="https://jonhuo11.github.io/static/resume/JONATHAN%20HUO%20TR2020%20Resume.pdf">&#128084;resume</a>
-                    and featured
-                    <a class="linksmall" href="https://github.com/jonhuo11/jonhuo11.github.io/tree/master/static/papers">&#128221;research papers</a>.
+                    and hobby
+                    <a class="linksmall" href="https://github.com/jonhuo11/jonhuo11.github.io/tree/master/static/papers">&#128221;research projects</a>.
                 </p>
+
                 <br /><br />
+
                 <h2>Lindenmayer Systems</h2>
                 <p>
                     The plant graphics on these page are created using
@@ -44,8 +47,9 @@
                 </p>
                 <br />
                 <p>
-                    Go ahead and <a onclick="windowResized();" class="linksmall">&#9193;click here</a> to generate something beautiful.
+                    Go ahead and <a onclick="windowResized();" class="linksmall">&#9193;click here</a> to generate something beautiful (WIP).
                 </p>
+
             </div>
         </div>
 
