--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>jonhuo11</title>
+        <title>jh11</title>
         <meta name="description" content="jonhuo11">
         <meta name="author" content="jonhuo11">
 
@@ -28,17 +28,12 @@
                 <a href="https://github.com/jonhuo11">&#128190;github.com/jonhuo11</a>
                 <br /><br />
                 <p>
-                    Aspiring programmer and engineer,<br />
-                    Waterloo CI graduating class of 2021.<br /><br />
-                    Click on these links to view my
-                    <a class="linksmall" href="https://jonhuo11.github.io/static/resume/JONATHAN%20HUO%20TR2020%20Resume.pdf">&#128084;resume</a>
-                    and hobby
-                    <a class="linksmall" href="https://github.com/jonhuo11/jonhuo11.github.io/tree/master/static/papers">&#128221;research projects</a>.
+                    Software engineering student at UWaterloo, class of 2026. Always interested in learning more about the world!
                 </p>
 
-                <br /><br />
-
+                <br />
                 <h2>Lindenmayer Systems</h2>
+                <br />
                 <p>
                     The plant graphics on these page are created using
                     <a class="linksmall" href="http://algorithmicbotany.org/papers/abop/abop.pdf">&#127807;Lindenmayer Systems</a>.
