--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                 <p>
                     Go ahead and <a onclick="windowResized();" class="linksmall">&#9193;click here</a> to generate something beautiful (WIP).
                 </p>
+                <br />
+                <p>Visit the <a class="linksmall" href="slimemold.html">new site </a> (WIP)</p>
 
             </div>
         </div>
