switched to webgl, not really effective

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     Go ahead and <a onclick="windowResized();" class="linksmall">&#9193;click here</a> to generate something beautiful (WIP).
                 </p>
                 <br />
-                <p>Visit the <a class="linksmall" href="slimemold.html">new site </a> (WIP)</p>
+                <p>Visit the <a class="linksmall" href="static/html/slimemold2.html">new site </a> (WIP)</p>
 
             </div>
         </div>
