--- a/static/html/slimemold.html
+++ b/static/html/slimemold.html
@@ -9,11 +9,12 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js" integrity="sha512-N4kV7GkNv7QR7RX9YF/olywyIgIwNvfEe2nZtfyj73HdjCUkAfOBDbcuJ/cTaN04JKRnw1YG1wnUyNKMsNgg3g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="../../scripts/slimemold.js"></script>
+        <script src="https://unpkg.com/gpu.js@latest/dist/gpu-browser.min.js"></script>
     </head>
 
     <body style="margin:0px;">
-        <div id="slimemoldsketch"></div>
+        <div id="petridish"></div>
+
+        <script src="../../scripts/slimemoldv2.js"></script>
     </body>
 </html>
