minor changes, added linkedin

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <br />
                 <h1>Jonathan Huo</h1>
                 <img src="./static/img/cartoonme.png" alt="a picture of me"></img>
-                <a href="mailto:jonhuo11@gmail.com">&#128236;jonhuo11@gmail.com</a>
+                <a href="https://linkedin.com/in/jonathan-huo-0a2b361bb">&#128188; LinkedIn</a>
                 <br />
-                <a href="https://github.com/jonhuo11">&#128190;github.com/jonhuo11</a>
+                <a href="https://github.com/jonhuo11">&#128190; Github</a>
                 <br /><br />
                 <p>
                     Software engineering student at UWaterloo, class of 2026. Always interested in learning more about the world!
@@ -45,7 +45,6 @@
                     Go ahead and <a onclick="windowResized();" class="linksmall">&#9193;click here</a> to generate something beautiful (WIP).
                 </p>
                 <br />
-                <p>Visit the <a class="linksmall" href="static/html/slimemold2.html">new site </a> (WIP)</p>
 
             </div>
         </div>
