--- a/static/html/slimemold.html
+++ b/static/html/slimemold.html
@@ -15,6 +15,6 @@
     <body style="margin:0px;">
         <div id="petridish"></div>
 
-        <script src="../../scripts/slimemoldv2.js"></script>
+        <script src="../../scripts/slimemold.js"></script>
     </body>
 </html>
