--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body>
         <div id="overlay">
-            <div id="about">
+            <div id="about" class="hidescroll">
 
                 <br />
                 <h1>Jonathan Huo</h1>
